# CN7N-tr4an3sfor6merLO9B

./: CN7N_tr4an3sfor6mer_LO9B.ipynb  README.md
artifacts/: norm_stats.json
config/: export.yaml  runtime.yaml  train.yaml
cpp/: CMakeLists.txt
cpp/include/: fe_ofi.hpp  litcvg_session.hpp  npy.hpp  perf_stats.hpp  preproc.hpp  ring_buffer.hpp  session.hpp  tca.hpp
cpp/src/: fe_ofi.cpp  litcvg_session.cpp  main_stream.cpp  npy.cpp  parity_run.cpp  perf_benchmark.cpp  preproc.cpp  session.cpp  tca.cpp
python0/: evaluate.py  export_onnx.py  parity_dump.py  train.py  utils.py
python0/data/: features.py  fi2010.py  loaders.py  windows.py
python0/explain/: alpha_term.py  attn_viz.py  visualize_perf.py
python0/model/: lit_cvg.py  losses.py
tests/: latency_smoke.py  test_parity_cpp_vs_py.py  test_parity_inputs.py  test_parity_outputs.py
